--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -28,7 +28,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
+  /*min-width: 320px;*/
   min-height: 100vh;
 }
 
@@ -42,9 +42,9 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 2000px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 rem;
   text-align: center;
 }
 
